
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {unsigned long s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int caddr_t ;


 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 unsigned long inet_addr (char*) ;
 int memcpy (int ,int ,int ) ;
 int perror (char*) ;

unsigned long

resolve (char *host)

{

  struct hostent *he;

  struct sockaddr_in tmp;

  if (inet_addr (host) != -1)

    return (inet_addr (host));

  he = gethostbyname (host);

  if (he)

    memcpy ((caddr_t) & tmp.sin_addr.s_addr, he->h_addr, he->h_length);

  else

    {

      perror ("gethostbyname");

      exit (0);

    }

  return (tmp.sin_addr.s_addr);

}
